Spacing fixes

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1058,7 +1058,12 @@ body.embed .status__content a,
   height: calc(var(--gap-default) * 2);
   justify-content: flex-start;
   margin-bottom: 0;
-  padding-bottom: calc(var(--gap-default) / 2);
+  padding-bottom: 0;
+}
+
+/* Status action bar */
+.layout-multiple-columns .status__action-bar {
+  margin-top: 12px;
 }
 
 /* Display name */
